--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,16 @@ tmp/
 __MACOSX/
 .DS_Store
 Thumbs.db
+
+
+#======================================
+# 固有
+#--------------------------------------
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
